<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gardient_background"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/customize_order_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/customize_order_scrollView"
        android:layout_width="match_parent"


        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/customize_order_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="50dp"
            tools:context=".takeOrderScreen.views.CustomizeOrderActivity">

            <Spinner
                android:id="@+id/customizeOrder_pickLocation_spinner"
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:autofillHints="@string/enterLocation"
                android:prompt="@string/app_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.877"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="368dp"
                android:layout_height="28dp"
                android:layout_marginTop="20dp"
                android:text="@string/AddImage"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customizeOrder_pickLocation_spinner" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/customizeOrder_images_recycler"
                android:layout_width="369dp"
                android:layout_height="122dp"
                app:layout_constraintCircleRadius="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/customizeOrder_date_lbl"
                android:layout_width="285dp"
                android:layout_height="50dp"
                android:layout_marginEnd="4dp"
                android:paddingTop="10dp"
                android:text="@string/DefaultDate"
                android:textAlignment="textStart"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/bidderItem_tech_imageLbl"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/customizeOrder_datePicker_btn"
                app:layout_constraintTop_toTopOf="@+id/bidderItem_tech_imageLbl" />

            <ImageView
                android:id="@+id/bidderItem_tech_imageLbl"
                android:layout_width="52dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/calenderWidget"

                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/customizeOrder_datePicker_btn"
                app:layout_constraintTop_toTopOf="@+id/customizeOrder_datePicker_btn"
                app:srcCompat="@drawable/calender_image" />

            <Button
                android:id="@+id/customizeOrder_datePicker_btn"
                android:layout_width="352dp"
                android:layout_height="67dp"
                android:layout_marginTop="16dp"
                app:backgroundTint="#00FFFFFF"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customizeOrder_images_recycler" />

            <TextView
                android:id="@+id/customizeOrder_fromTime_lbl"
                android:layout_width="128dp"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:paddingTop="6dp"
                android:text="@string/FromTime"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/customizeOrder_fromTime_btn" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="33dp"
                android:layout_height="35dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/timer"
                android:paddingTop="3dp"
                app:layout_constraintEnd_toEndOf="@+id/customizeOrder_fromTime_btn"
                app:layout_constraintTop_toTopOf="@+id/customizeOrder_fromTime_lbl"
                app:srcCompat="@drawable/clock_image" />

            <Button
                android:id="@+id/customizeOrder_fromTime_btn"
                android:layout_width="178dp"
                android:layout_height="52dp"
                android:layout_marginTop="20dp"
                app:backgroundTint="#00FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customizeOrder_datePicker_btn" />

            <TextView
                android:id="@+id/customizeOrder_toTime_lbl"
                android:layout_width="128dp"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:paddingTop="6dp"
                android:text="@string/ToTime"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/imageView5"
                app:layout_constraintTop_toTopOf="@+id/customizeOrder_toTime_btn" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="33dp"
                android:layout_height="35dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/timer"
                android:paddingTop="3dp"
                app:layout_constraintEnd_toEndOf="@+id/customizeOrder_toTime_btn"
                app:layout_constraintTop_toTopOf="@+id/customizeOrder_toTime_lbl"
                app:srcCompat="@drawable/clock_image" />

            <Button
                android:id="@+id/customizeOrder_toTime_btn"
                android:layout_width="178dp"
                android:layout_height="52dp"
                android:layout_marginTop="20dp"
                app:backgroundTint="#00FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customizeOrder_fromTime_btn" />

            <EditText
                android:id="@+id/customizeOrder_description_txt"
                android:layout_width="385dp"
                android:layout_height="103dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/OrderDesc"
                android:inputType="textMultiLine|textPersonName"
                android:singleLine="false"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.615"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customizeOrder_toTime_btn" />

            <Button
                android:id="@+id/cusomizeOrder_selectTech_btn"
                android:layout_width="237dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:text="@string/selectTech"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customizeOrder_description_txt" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="293dp"
                android:layout_height="21dp"
                android:layout_marginTop="8dp"
                android:text="@string/or"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cusomizeOrder_selectTech_btn" />

            <Button
                android:id="@+id/customizeOreder_publish_btn"
                android:layout_width="237dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:text="@string/publishOrder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>




</androidx.coordinatorlayout.widget.CoordinatorLayout>